# Spotify-App

./: build.sh  pyproject.toml
main_app/: urls.py  views.py
main_app/migrations/: 0001_initial.py  0003_alter_artist_bio_alter_artist_verified_artist_and_more.py
main_app/static/styles/: main.css
main_app/templates/: base.html  home.html  song_list.html
spotify_project/: settings.py  urls.py
