[tool.poetry]
name = "spotify-django"
version = "0.1.0"
description = ""
authors = ["Abdel7004 <abdelrahmanh15@gmail.com>"]
readme = "README.md"
packages = [{include = "spotify_django"}]

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
